# Hermes-Hive

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build_test.py  check_status.py  hive.json  minimal-calculator-delta.json  pyproject.toml  start.py  test_calculation.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
_dev/: build_via_daemon.py  debug_build.py  tasks_calculator.json
docs/: hive-json.md
orchestrator/: daemon.py  hermes_bridge.py  hermes_runner.py  hermes_wrapper.py  hive_client.py  i18n.py  machine.py  mcp_server.py  orchestrator.py  protocol.py
orchestrator/dashboard/: events.py  server.py
orchestrator/dashboard/templates/: dashboard.html
orchestrator/infrastructure/: cost_tracker.py  dependency_manager.py  errors.py  memory_store.py  sandbox.py  session_manager.py  validator.py
orchestrator/roles/: arc.py  coder.py  planner.py  reviewer.py  tester.py  toolman.py
orchestrator/versioning/: version_manager.py
tests/: test_bead_converter.py  test_color_matching.py  test_edge.py  test_mock.py  test_phase1_acceptance.py  test_phase2_acceptance.py  test_phase3_acceptance.py  test_project_management.py  test_unit.py
