[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-hive-v4"
version = "4.1.0"
description = "HIVE — Multi-Agent Orchestration for Hermes Agent"
authors = [
    {name = "Hermes-Hive Contributors"},
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["multi-agent", "orchestrator", "mcp", "llm", "build-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "transitions>=0.9.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]
test = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/NousResearch/hermes-hive-v4"
Documentation = "https://github.com/NousResearch/hermes-hive-v4#readme"

[project.scripts]
hive = "orchestrator.mcp_server:main"
hive-daemon = "orchestrator.daemon:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
