[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-hive-v4"
version = "4.1.1"
description = "HIVE — Multi-Agent Orchestration for Hermes Agent"
authors = [
    {name = "Hermes-Hive Contributors"},
]
license = "MIT"
readme = "README.md"
keywords = ["multi-agent", "orchestrator", "mcp", "llm", "build-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "transitions>=0.9.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]
test = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/Ebonyhtx/Hermes-Hive"
Documentation = "https://github.com/Ebonyhtx/Hermes-Hive#readme"

[tool.setuptools.packages.find]
include = ["orchestrator*"]
exclude = ["tests*", "_dev*"]

[project.scripts]
hive = "orchestrator.mcp_server:main"
hive-daemon = "orchestrator.daemon:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "twine>=6.2.0",
]
